Apply display: block globally to enable the width declaration
- Unset display and width value of timestamp on pinned messages card

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_PinnedEventTile.scss
+++ b/res/css/views/rooms/_PinnedEventTile.scss
@@ -86,6 +86,8 @@ limitations under the License.
 
         .mx_PinnedEventTile_timestamp {
             color: $secondary-content;
+            display: unset;
+            width: unset; // Cancel the default width value
         }
 
         .mx_AccessibleButton_kind_link {
