--- a/res/css/views/messages/_MessageTimestamp.scss
+++ b/res/css/views/messages/_MessageTimestamp.scss
@@ -18,5 +18,6 @@ limitations under the License.
     color: $event-timestamp-color;
     font-size: $font-10px;
     font-variant-numeric: tabular-nums;
+    display: block; // enable the width setting below
     width: $MessageTimestamp_width;
 }
