Apply nowrap globally
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/messages/_MessageTimestamp.scss
+++ b/res/css/views/messages/_MessageTimestamp.scss
@@ -20,4 +20,5 @@ limitations under the License.
     font-variant-numeric: tabular-nums;
     display: block; // enable the width setting below
     width: $MessageTimestamp_width;
+    white-space: nowrap;
 }
