MessageTimestamp on ThreadsList - Remove width setting and add font-size setting
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -845,8 +845,8 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
     }
 
     .mx_MessageTimestamp {
+        font-size: $font-12px;
         max-width: 80px;
-        width: auto;
     }
 }
 
