--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -846,7 +846,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 
     .mx_MessageTimestamp {
         font-size: $font-12px;
-        max-width: 80px;
+        max-width: var(--MessageTimestamp-max-width);
     }
 }
 
