Apply user-select: none globally
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/messages/_MessageTimestamp.scss
+++ b/res/css/views/messages/_MessageTimestamp.scss
@@ -23,4 +23,5 @@ limitations under the License.
     display: block; // enable the width setting below
     width: $MessageTimestamp_width;
     white-space: nowrap;
+    user-select: none;
 }
