Include a descedant of mx_SettingsTab_heading
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/settings/tabs/_SettingsTab.scss
+++ b/res/css/views/settings/tabs/_SettingsTab.scss
@@ -27,10 +27,10 @@ limitations under the License.
     font-weight: 600;
     color: $primary-content;
     margin-block: 10px; // TODO: Use a spacing variable
-}
 
-.mx_SettingsTab_heading:nth-child(n + 2) {
-    margin-block-start: 30px; // TODO: Use a spacing variable
+    &:nth-child(n + 2) {
+        margin-block-start: 30px; // TODO: Use a spacing variable
+    }
 }
 
 .mx_SettingsTab_subheading {
