Specify a margin declaration to a specific element
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/settings/tabs/user/_AppearanceUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_AppearanceUserSettingsTab.scss
@@ -26,8 +26,8 @@ limitations under the License.
 }
 
 .mx_AppearanceUserSettingsTab_Advanced {
-    > * {
-        margin-bottom: 16px;
+    .mx_Checkbox {
+        margin-block: $spacing-16;
     }
 
     .mx_AppearanceUserSettingsTab_systemFont {
