Use mx_SettingsTab_subsectionText instead
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/settings/tabs/user/_AppearanceUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_AppearanceUserSettingsTab.scss
@@ -19,7 +19,7 @@ limitations under the License.
 }
 
 .mx_AppearanceUserSettingsTab {
-    > .mx_SettingsTab_SubHeading {
+    .mx_SettingsTab_subsectionText {
         margin-bottom: 32px;
         margin-top: 12px;
     }
