Set the same color as mx_SettingsTab to mx_SettingsTab_subsectionText
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/settings/tabs/user/_AppearanceUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_AppearanceUserSettingsTab.scss
@@ -22,6 +22,7 @@ limitations under the License.
     .mx_SettingsTab_subsectionText {
         margin-bottom: 32px;
         margin-top: 12px;
+        color: $primary-content; // Same as mx_SettingsTab
     }
 }
 
