--- a/res/css/views/settings/tabs/user/_AppearanceUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_AppearanceUserSettingsTab.scss
@@ -20,8 +20,7 @@ limitations under the License.
 
 .mx_AppearanceUserSettingsTab {
     .mx_SettingsTab_subsectionText {
-        margin-bottom: 32px;
-        margin-top: 12px;
+        margin-block: $spacing-12 $spacing-32;
         color: $primary-content; // Same as mx_SettingsTab
     }
 }
