Add the inline margin to the shortcuts, not to the keys
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/settings/tabs/user/_KeyboardUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_KeyboardUserSettingsTab.scss
@@ -34,6 +34,7 @@ limitations under the License.
 
         .mx_KeyboardShortcut {
             flex-wrap: nowrap;
+            column-gap: 5px; // TODO: Use a spacing variable
         }
     }
 }
