Remove unnecessary specificity
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/settings/tabs/user/_LabsUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_LabsUserSettingsTab.scss
@@ -15,7 +15,7 @@ limitations under the License.
 */
 
 .mx_LabsUserSettingsTab {
-    .mx_SettingsTab_section .mx_SettingsFlag {
+    .mx_SettingsFlag {
         margin-right: 0; // remove right margin to align with beta cards
         align-items: center;
     }
