--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -38,7 +38,7 @@ limitations under the License.
 
     .mx_MessageComposer_row {
         /* This forces the composer to wrap its content, even if it has no word boundaries. Fixes #22507 */
-        overflow: hidden;
+        overflow-x: clip;
         grid-area: composer;
     }
 
