--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -37,7 +37,7 @@ limitations under the License.
     }
 
     .mx_MessageComposer_row {
-        overflow-x: clip;
+        min-width: 0;
         grid-area: composer;
     }
 
