--- a/res/css/views/settings/tabs/user/_LabsUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_LabsUserSettingsTab.scss
@@ -15,6 +15,11 @@ limitations under the License.
 */
 
 .mx_LabsUserSettingsTab {
+    .mx_SettingsTab_subsectionText,
+    .mx_SettingsTab_section {
+        margin-bottom: var(--SettingsTab_section-margin-bottom-preferences-labs);
+    }
+
     .mx_SettingsFlag {
         margin-right: 0; // remove right margin to align with beta cards
         align-items: center;
