--- a/res/css/views/settings/tabs/user/_HelpUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_HelpUserSettingsTab.scss
@@ -15,7 +15,13 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-.mx_HelpUserSettingsTab code {
-    word-break: break-all;
-    user-select: all;
+.mx_HelpUserSettingsTab {
+    code {
+        word-break: break-all;
+        user-select: all;
+    }
+
+    details {
+        margin: $spacing-12 auto;
+    }
 }
