Replace <br> for spacing with a margin style declaration
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/settings/tabs/user/_HelpUserSettingsTab.scss
+++ b/res/css/views/settings/tabs/user/_HelpUserSettingsTab.scss
@@ -23,5 +23,9 @@ limitations under the License.
 
     details {
         margin: $spacing-12 auto;
+
+        summary {
+            margin-bottom: $spacing-12;
+        }
     }
 }
