--- a/res/css/views/settings/tabs/_SettingsTab.scss
+++ b/res/css/views/settings/tabs/_SettingsTab.scss
@@ -16,6 +16,10 @@ limitations under the License.
 
 .mx_SettingsTab {
     color: $primary-content;
+
+    a {
+        color: $accent-alt;
+    }
 }
 
 .mx_SettingsTab_warningText {
@@ -87,10 +91,6 @@ limitations under the License.
     cursor: pointer;
     color: $accent;
     word-break: break-all;
-}
-
-.mx_SettingsTab a {
-    color: $accent-alt;
 }
 
 .mx_SettingsTab_toggleWithDescription {
