--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -58,6 +58,10 @@ limitations under the License.
     .mx_VoiceMessagePrimaryContainer {
         margin-right: $spacing-8;
     }
+
+    a {
+        color: $accent;
+    }
 }
 
 .mx_MessageComposer_autocomplete_wrapper {
